Add blue container and footer

--- a/index.html
+++ b/index.html
@@ -75,12 +75,18 @@
       <p class="author">-Rick Warren </p>
     </div>
 
-    <div class="blue-container">
-      Call to action! It's time!
-      <p>Sign up for our product by clicking that button right over there! </p>
-      <button class="blue-button white-border">Sign up</button>
+    <div class="container">
+      <div class="container blue">
+        <div class="text-container">
+          <h class="subtitle">Call to action! It's time!</h>
+          <p
+            >Sign up for our product by clicking that button right over there!
+          </p>
+        </div>
+        <button class="blue-button white-border">Sign up</button>
+      </div>
     </div>
 
-    <div class="footer">Copyrights and something TOP</div>
+    <div class="container footer">Copyrights and something TOP</div>
   </body>
 </html>
