Add cats and dogs images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <div class="header">
-      Header logo
+      PeludiX
       <ul class="links">
         <li><a> header link one </a></li>
         <li><a> header link two</a></li>
@@ -26,7 +26,9 @@
         >
         <button class="blue-button">Sign up</button>
       </div>
-      <img src="./img/cat-dog.jpg" />
+      <div class="img-container">
+        <img src="./img/cat-dog.jpg" />
+      </div>
     </div>
 
     <div class="info"
@@ -34,7 +36,7 @@
       <div class="item-list">
         <div class="item">
           <div class="blue-border">
-            <img src="" alt="" />
+            <img src="./img/2dogs1cat.jpg" alt="" />
           </div>
           <p class="img-description"
             >this is some subtext under an illustration or image</p
@@ -42,7 +44,7 @@
         </div>
         <div class="item">
           <div class="blue-border">
-            <img src="" alt="" />
+            <img src="./img/bunny-cat.jpg" alt="" />
           </div>
           <p class="img-description"
             >this is some subtext under an illustration or image</p
@@ -50,7 +52,7 @@
         </div>
         <div class="item">
           <div class="blue-border">
-            <img src="" alt="" />
+            <img src="./img/cat-dog1.jpg" alt="" />
           </div>
           <p class="img-description"
             >this is some subtext under an illustration or image</p
@@ -58,7 +60,7 @@
         </div>
         <div class="item">
           <div class="blue-border">
-            <img src="" alt="" />
+            <img src="./img/cat-dog2.jpg" alt="" />
           </div>
           <p class="img-description"
             >this is some subtext under an illustration or image</p
