--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="header">
+    <div class="header black-background">
       PeludiX
       <ul class="links">
         <li><a> header link one </a></li>
@@ -17,14 +17,14 @@
       </ul>
     </div>
 
-    <div class="neck">
+    <div class="neck black-background">
       <div class="text-container">
         <h1 class="big-title">This website is awesome</h1>
         <p
           >This website has some subtext that goes here under the main title.
           It's a smaller font and the color is lower contrast</p
         >
-        <button class="blue-button">Sign up</button>
+        <button class="blue-background rounded-corner">Sign up</button>
       </div>
       <div class="img-container">
         <img src="./img/cat-dog.jpg" />
@@ -78,17 +78,21 @@
     </div>
 
     <div class="container">
-      <div class="container blue">
-        <div class="text-container">
+      <div class="container blue-background rounded-corner">
+        <div class="text-container" id="blue-text">
           <h class="subtitle">Call to action! It's time!</h>
           <p
             >Sign up for our product by clicking that button right over there!
           </p>
         </div>
-        <button class="blue-button white-border">Sign up</button>
+        <button class="blue-background white-border rounded-corner"
+          >Sign up</button
+        >
       </div>
     </div>
 
-    <div class="container footer">Copyrights and something TOP</div>
+    <div class="container footer black-background"
+      >Copyrights and something TOP</div
+    >
   </body>
 </html>
